--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,76 @@
     transform: rotate(360deg);
   }
 }
+
+.navbar {
+  margin-top: -20px;
+  background: linear-gradient(-135deg, #c850c0, #4158d0);
+}
+
+.navbar nav ul {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px 0 0 0;
+}
+
+@media screen and (max-width: 768px) {
+  .navbar nav ul {
+    justify-content: center;
+  }
+
+  .navbar nav ul li {
+    width: auto;
+    margin: 5px;
+    padding: 0 10px;
+    font-size: 12px;
+  }
+}
+
+.navbar nav ul li {
+  height: 30px;
+  width: 100px;
+  margin-right: 10px;
+  outline: none;
+  border: none;
+  border-radius: 25px;
+  font-size: 14px;
+  font-weight: 500;
+  color: #fff;
+  background: ghostwhite;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+@media screen and (min-width: 768px) {
+  .navbar nav ul li {
+    width: 120px;
+  }
+}
+
+.navbar nav ul li:hover {
+  transform: scale(1.10);
+}
+
+.navbar nav ul li a {
+  text-decoration: none;
+  color: #7e1f74;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+@media screen and (min-width: 768px) {
+  .navbar nav ul li a {
+    font-size: 16px;
+  }
+}
+
+
+
+
