--- a/src/component/login/Login.css
+++ b/src/component/login/Login.css
@@ -4,7 +4,7 @@
     padding: 0;
     font-family: popins, sans-serif;
     box-sizing: border-box;
-    height: 120vh;
+    height: 100vh;
     width: 100%;
     place-items: center;
     background-image: url('../../background.jpg');
@@ -73,7 +73,8 @@
 }
 
 .login-container form .field input:focus + label,
-.login-container form .field input:valid + label {
+.login-container form .field input:valid + label,
+.login-container form .field input[type="email"]:required:invalid:not(:empty) + label{
     top: 0;
     font-size: 16px;
     color: #4158d0;
