Styled the home page and fixed the email field bug in register EDIT:email buf not fixed

--- a/src/component/login/Login.css
+++ b/src/component/login/Login.css
@@ -73,8 +73,7 @@
 }
 
 .login-container form .field input:focus + label,
-.login-container form .field input:valid + label,
-.login-container form .field input[type="email"]:required:invalid:not(:empty) + label{
+.login-container form .field input:valid + label {
     top: 0;
     font-size: 16px;
     color: #4158d0;
