--- a/src/App.css
+++ b/src/App.css
@@ -42,11 +42,29 @@
   background: linear-gradient(-135deg, #c850c0, #4158d0);
 }
 
+@media screen and (max-width: 768px) {
+  .navbar {
+
+
+  }
+}
+
+.navbar nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 50px;
+}
+
 .navbar nav ul {
   display: flex;
   justify-content: center;
   align-items: center;
   padding: 20px 0 0 0;
+}
+
+.navbar nav .login-acc-button {
+  padding-top: 20px;
 }
 
 @media screen and (max-width: 768px) {
