--- a/src/component/login_acc_button/LoginAccButton.css
+++ b/src/component/login_acc_button/LoginAccButton.css
@@ -16,3 +16,23 @@
     justify-content: center;
     align-items: center;
 }
+
+@media screen and (min-width: 768px) {
+    .login-button {
+        width: 120px;
+    }
+}
+
+.login-button:hover {
+    transform: scale(1.10);
+}
+
+.login-button a {
+    text-decoration: none;
+    color: #7e1f74;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
