--- a/src/component/login_acc_button/LoginAccButton.css
+++ b/src/component/login_acc_button/LoginAccButton.css
@@ -36,3 +36,13 @@
     justify-content: center;
     align-items: center;
 }
+
+.login-button button {
+    text-decoration: none;
+    color: #7e1f74;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
