Fixed medic name text inside modal

--- a/src/component/login_acc_button/LoginAccButton.css
+++ b/src/component/login_acc_button/LoginAccButton.css
@@ -45,6 +45,7 @@
     font-weight: 500;
     background: ghostwhite;
     text-decoration: none;
+    cursor: pointer;
     color: #7e1f74;
     width: 100%;
     height: 100%;
