--- a/src/component/medics/Medics.css
+++ b/src/component/medics/Medics.css
@@ -196,3 +196,180 @@
 .review-container .review-body {
     padding: 10px 20px;
 }
+
+.add-review-modal {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.add-review-modal-container {
+    width: 350px;
+    background: #fff;
+    border-radius: 15px;
+    box-shadow: 0 15px 20px rgba(0, 0, 0, 0.1);
+}
+
+.add-review-container form {
+    padding: 25px 30px 50px 30px;
+}
+
+.add-review-container form .field {
+    height: 50px;
+    width: 100%;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    padding-bottom: 10px;
+    position: relative;
+}
+
+.add-review-container form .field label {
+    position: absolute;
+    top: 50%;
+    left: 0;
+    transform: translateY(-240%);
+    font-size: 17px;
+    font-weight: 400;
+    pointer-events: none;
+    color: black;
+    transition: all 0.3s ease;
+}
+
+.add-review-container form .field input {
+    height: 100%;
+    width: 92%;
+    outline: none;
+    font-size: 17px;
+    padding-left: 20px;
+    transition: all 0.3s ease;
+}
+
+.add-review-container form .field textarea {
+    height: 200%;
+    width: 92%;
+    outline: none;
+    font-size: 17px;
+    padding-left: 20px;
+    border: 1px solid lightgray;
+    border-radius: 10px;
+    transition: all 0.3s ease;
+}
+
+.add-review-container form .field textarea:focus {
+    border-color: #4158d0;
+}
+
+.add-review-container form .field button[type="submit"] {
+    height: 50px;
+    margin-left: 75px;
+    width: 50%;
+    margin-top: 50px;
+    outline: none;
+    border: none;
+    border-radius: 25px;
+    font-size: 20px;
+    font-weight: 500;
+    color: #fff;
+    background: linear-gradient(-135deg, #c850c0, #4158d0);
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+.add-review-container form .field input[type=range] {
+    height: 25px;
+    -webkit-appearance: none;
+    width: 100%;
+    margin: 10px 0 10px -17px;
+}
+
+.add-review-container form .field input[type=range]:focus {
+    outline: none;
+}
+
+.add-review-container form .field input[type=range]::-webkit-slider-runnable-track {
+    width: 100%;
+    height: 5px;
+    cursor: pointer;
+    box-shadow: 0 0 0 #000000;
+    background: #4158d0;
+    border-radius: 1px;
+    border: 0 solid #000000;
+}
+
+.add-review-container form .field input[type=range]::-webkit-slider-thumb {
+    box-shadow: 0 0 0 #000000;
+    border: 1px solid #4158d0;
+    height: 18px;
+    width: 18px;
+    border-radius: 25px;
+    background: #c850c0;
+    cursor: pointer;
+    -webkit-appearance: none;
+    margin-top: -7px;
+}
+
+.add-review-container form .field input[type=range]:focus::-webkit-slider-runnable-track {
+    background: #4158d0;
+}
+
+.add-review-container form .field input[type=range]::-moz-range-track {
+    width: 100%;
+    height: 5px;
+    cursor: pointer;
+    box-shadow: 0 0 0 #000000;
+    background: #4158d0;
+    border-radius: 1px;
+    border: 0 solid #000000;
+}
+
+.add-review-container form .field input[type=range]::-moz-range-thumb {
+    box-shadow: 0 0 0 #000000;
+    border: 1px solid #4158d0;
+    height: 18px;
+    width: 18px;
+    border-radius: 25px;
+    background: #c850c0;
+    cursor: pointer;
+}
+
+.add-review-container form .field input[type=range]::-ms-track {
+    width: 100%;
+    height: 5px;
+    cursor: pointer;
+    background: transparent;
+    border-color: transparent;
+    color: transparent;
+}
+
+.add-review-container form .field input[type=range]::-ms-fill-lower {
+    background: #4158d0;
+    border: 0 solid #000000;
+    border-radius: 2px;
+    box-shadow: 0 0 0 #000000;
+}
+
+.add-review-container form .field input[type=range]::-ms-fill-upper {
+    background: #4158d0;
+    border: 0 solid #000000;
+    border-radius: 2px;
+    box-shadow: 0 0 0 #000000;
+}
+
+.add-review-container form .field input[type=range]::-ms-thumb {
+    margin-top: 1px;
+    box-shadow: 0 0 0 #000000;
+    border: 1px solid #4158d0;
+    height: 18px;
+    width: 18px;
+    border-radius: 25px;
+    background: #c850c0;
+    cursor: pointer;
+}
+
+.add-review-container form .field input[type=range]:focus::-ms-fill-lower {
+    background: #4158d0;
+}
+
+.add-review-container form .field input[type=range]:focus::-ms-fill-upper {
+    background: #4158d0;
+}
