--- a/src/component/medics/Medics.css
+++ b/src/component/medics/Medics.css
@@ -275,18 +275,24 @@
     transition: all 0.3s ease;
 }
 
-.add-review-container form .field input[type=range] {
+.add-review-container form .field button[type="submit"]:hover {
+    transform: scale(1.1);
+    transition: all 0.3s ease;
+}
+
+.add-review-container form .field input[type="range"] {
     height: 25px;
+    accent-color: white;
     -webkit-appearance: none;
     width: 100%;
     margin: 10px 0 10px -17px;
 }
 
-.add-review-container form .field input[type=range]:focus {
+.add-review-container form .field input[type="range"]:focus {
     outline: none;
 }
 
-.add-review-container form .field input[type=range]::-webkit-slider-runnable-track {
+.add-review-container form .field input[type="range"]::-webkit-slider-runnable-track {
     width: 100%;
     height: 5px;
     cursor: pointer;
@@ -296,7 +302,7 @@
     border: 0 solid #000000;
 }
 
-.add-review-container form .field input[type=range]::-webkit-slider-thumb {
+.add-review-container form .field input[type="range"]::-webkit-slider-thumb {
     box-shadow: 0 0 0 #000000;
     border: 1px solid #4158d0;
     height: 18px;
@@ -308,11 +314,11 @@
     margin-top: -7px;
 }
 
-.add-review-container form .field input[type=range]:focus::-webkit-slider-runnable-track {
+.add-review-container form .field input[type="range"]:focus::-webkit-slider-runnable-track {
     background: #4158d0;
 }
 
-.add-review-container form .field input[type=range]::-moz-range-track {
+.add-review-container form .field input[type="range"]::-moz-range-track {
     width: 100%;
     height: 5px;
     cursor: pointer;
@@ -322,7 +328,7 @@
     border: 0 solid #000000;
 }
 
-.add-review-container form .field input[type=range]::-moz-range-thumb {
+.add-review-container form .field input[type="range"]::-moz-range-thumb {
     box-shadow: 0 0 0 #000000;
     border: 1px solid #4158d0;
     height: 18px;
@@ -332,7 +338,7 @@
     cursor: pointer;
 }
 
-.add-review-container form .field input[type=range]::-ms-track {
+.add-review-container form .field input[type="range"]::-ms-track {
     width: 100%;
     height: 5px;
     cursor: pointer;
@@ -341,21 +347,21 @@
     color: transparent;
 }
 
-.add-review-container form .field input[type=range]::-ms-fill-lower {
+.add-review-container form .field input[type="range"]::-ms-fill-lower {
     background: #4158d0;
     border: 0 solid #000000;
     border-radius: 2px;
     box-shadow: 0 0 0 #000000;
 }
 
-.add-review-container form .field input[type=range]::-ms-fill-upper {
-    background: #4158d0;
+.add-review-container form .field input[type="range"]::-ms-fill-upper {
+    background: white;
     border: 0 solid #000000;
     border-radius: 2px;
     box-shadow: 0 0 0 #000000;
 }
 
-.add-review-container form .field input[type=range]::-ms-thumb {
+.add-review-container form .field input[type="range"]::-ms-thumb {
     margin-top: 1px;
     box-shadow: 0 0 0 #000000;
     border: 1px solid #4158d0;
@@ -366,10 +372,10 @@
     cursor: pointer;
 }
 
-.add-review-container form .field input[type=range]:focus::-ms-fill-lower {
+.add-review-container form .field input[type="range"]:focus::-ms-fill-lower {
     background: #4158d0;
 }
 
-.add-review-container form .field input[type=range]:focus::-ms-fill-upper {
-    background: #4158d0;
+.add-review-container form .field input[type="range"]:focus::-ms-fill-upper {
+    background: white;
 }
