--- a/src/component/medicalData/MedicalData.css
+++ b/src/component/medicalData/MedicalData.css
@@ -6,7 +6,7 @@
     padding: 0;
     font-family: popins, sans-serif;
     box-sizing: border-box;
-    height: 100%;
+    height: min(110vh, 100%);
     width: 100%;
     place-items: center;
     background-image: url('../../background.jpg');
@@ -34,6 +34,7 @@
         grid-template-columns: 1fr;
         grid-gap: 2rem;
         padding: 0 20px;
+        width: auto;
     }
 }
 
