--- a/src/component/medics/Medics.css
+++ b/src/component/medics/Medics.css
@@ -5,13 +5,20 @@
     padding: 0;
     font-family: popins, sans-serif;
     box-sizing: border-box;
-    height: 110vh;
+    height: 100vh;
     width: 100%;
     place-items: center;
+}
+
+.medics .bg {
+    position: fixed;
+    height: 110vh;
+    width: 100%;
     background-image: url('../../background.jpg');
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
+    z-index: -1;
 }
 
 .medics .medics-container {
