--- a/src/component/medicalData/MedicalData.css
+++ b/src/component/medicalData/MedicalData.css
@@ -15,6 +15,17 @@
     background-attachment: fixed;
 }
 
+.data .bg {
+    position: fixed;
+    height: 110vh;
+    width: 100%;
+    background-image: url('../../background.jpg');
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    z-index: -1;
+}
+
 .data .personal-data-container {
     display: grid;
     grid-auto-flow: column;
@@ -191,7 +202,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100%;
+    height: 100px;
     width: 50%;
     padding: 10px 20px;
     background: white;
