Fixed add appointments and add consultation modals.

--- a/src/component/appointments/Appointments.css
+++ b/src/component/appointments/Appointments.css
@@ -15,6 +15,17 @@
     background-attachment: fixed;
 }
 
+.appointments-overview .bg {
+    position: fixed;
+    height: 110vh;
+    width: 100%;
+    background-image: url('../../background.jpg');
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    z-index: -1;
+}
+
 @keyframes shake {
     0% { transform: translateX(0); }
     25% { transform: translateX(-5px); }
@@ -58,7 +69,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100%;
+    height: 100px;
     width: 50%;
     padding: 10px 20px;
     background: white;
@@ -67,8 +78,8 @@
 }
 
 .add-appointment button {
-    height: 40px;
-    width: 50%;
+    height: 50px;
+    width: 60%;
     outline: none;
     border: none;
     border-radius: 25px;
